content/nomad/v1.10.x/content/commands/license/inspect.mdx
---
layout: docs
page_title: 'nomad license inspect command reference'
description: |
  The `nomad license inspect` command inspects a Nomad Enterprise license to see if it is valid with the installed Nomad binary.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-10T11:41:43-05:00
last_modified: 2025-10-10T11:41:43-05:00
# END AUTO GENERATED METADATA
---

# `nomad license inspect` command reference

The `license inspect` command is used to inspect and validate a Nomad Enterprise
license. It will read the license from a file on disk or an environment variable
and exit non-0 if the license is not valid with the Nomad binary.

This command should always be run with the new binary before upgrading Nomad on a server,
as the server agent will not start with an invalid license.

Using this command against an IBM Passport Advantage Online (PAO) key displays
the license inspect block for each Nomad entitlement included in the PAO key.
Use the [`nomad license get` command](/nomad/commands/license/get) to display
only the active license.

<EnterpriseAlert />

## Usage

```plaintext
nomad license inspect [/path/to/license.hclic]
```

## Examples

With a license file argument:

```shell-session
$ nomad license inspect /path/to/nomad/license.hclic
Source: /path/to/nomad/license.hclic
Product: nomad
NonProduction: false
License ID: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
Customer ID: bbbbbbbb-bbbb-bbbb-bbbb-bbbbbbbbbbbb
Installation ID: *
Issue Time: 2021-12-01 17:49:23.021041516 +0000 UTC
Start Time: 2021-12-01 00:00:00 +0000 UTC
Expiration Time: 2023-12-01 00:00:00 +0000 UTC
Termination Time: 2024-01-01 00:00:00 +0000 UTC
Build Date: 2000-01-01 00:00:00 +0000 UTC
Flags: {
   "modules": [
      "multicluster-and-efficiency",
      "governance-policy"
   ]
}

Validation Checks:
   ✓ All checks passed
```

With a license file environment variable:

```shell-session
$ export NOMAD_LICENSE_PATH=/path/to/nomad/license.hclic
$ nomad license inspect
Source: /path/to/nomad/license.hclic (path from the NOMAD_LICENSE_PATH environment variable)
Product: nomad
.....
Validation Checks:
   ✓ All checks passed
```

With a license string environment variable:

```shell-session
$ export NOMAD_LICENSE=full-license-text-string
$ nomad license inspect
Source: NOMAD_LICENSE environment variable
.....
Validation Checks:
   ✓ All checks passed
```

## Example error

```shell-session
$ nomad license inspect license.hclic
...
Validation Checks:
      ✗ License ExpirationDate must be after Version BuildDate
        binary build date is not before license expiration. binary's build date: "2026-03-16T15:58:56Z", license expiration date: "2025-10-19T23:59:59Z", checked at: "2026-03-23T08:36:06-07:00"
```
